# news-classifier

./: .gitignore  README.md  poetry.toml  pyproject.toml
trabalho2/notebooks/: main.ipynb
trabalho2/tests/: tests.ipynb
